--- a/helloworld/CMakeLists.txt
+++ b/helloworld/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.1)
 
-project(helloworld VERSION 0.0.1 LANGUAGES CXX)
+project(helloworld VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER} LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 11)
 
