--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: cpp
 dist: trusty
 
+addons:
+  apt:
+    packages:
+      - libboost-test-dev
+
 before_script:
   - mkdir build
   - cd build
