Configure deploying to Bintray

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,9 @@ script:
   - make test
   - cpack --config helloworld/CPackConfig.cmake
   - ls -l
+deploy:
+  provider: script
+  skip_cleanup: true
+  script: curl -T helloworld-0.0.$TRAVIS_BUILD_NUMBER.deb -urastopyakin:$BINTRAY_KEY https://api.bintray.com/content/rastopyakin/otus_hws/helloworld/0.0.$TRAVIS_BUILD_NUMBER/helloworld-0.0.$TRAVIS_BUILD_NUMBER.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1
+  on:
+    branch: master
