Make CMake to manage packaging and deploying steps
Travis file got simplified and don't need to be touched anymore. CMake calls
CPack and curl while building "deploy" target for all the subprojects.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 3.1)
 
 project(otus_hws)
 
+add_custom_target(deploy
+  COMMENT "deploying is executed")
+
 add_subdirectory(helloworld)
 
 enable_testing()
