--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,6 @@ add_custom_target(deploy
   COMMENT "deploying is executed")
 
 add_subdirectory(helloworld)
+add_subdirectory(ip_filter)
 
 enable_testing()
