Acquire newer compiler
Default gcc-4.8 doesn't support -std=c++14 in full.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,14 @@ dist: trusty
 
 addons:
   apt:
+    sources:
+      - ubuntu-toolchain-r-test
     packages:
       - libboost-test-dev
+      - g++-7
+env:
+  - CXX=g++-7
+  - cc=gcc-7
 
 before_script:
   - mkdir build
