Fix CXX variable issue
Travis overrides the setting after exporting, so move it to before_script stage.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,14 @@ addons:
     packages:
       - libboost-test-dev
       - g++-7
-env:
-  - CXX=g++-7
-  - cc=gcc-7
+# env:
+  # - CXX=g++-7
+  # - cc=gcc-7
 
 before_script:
   - mkdir build
   - cd build
+  - export CXX=g++-7
   - cmake ..
 script:
   - make
