Add full version display

--- a/helloworld/version.hpp.in
+++ b/helloworld/version.hpp.in
@@ -1,6 +1,6 @@
 #ifndef VERSION_HPP
 #define VERSION_HPP
 
-#cmakedefine PROJECT_VERSION_PATCH @PROJECT_VERSION_PATCH@
+#cmakedefine PROJECT_VERSION "@PROJECT_VERSION@"
 
 #endif /* VERSION_HPP */
