--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,6 @@ add_custom_target(deploy
 add_subdirectory(helloworld)
 add_subdirectory(ip_filter)
 add_subdirectory(bin_id)
+add_subdirectory(timus)
 
 enable_testing()
