Add print_ip draft (print_ip)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,5 +10,6 @@ add_subdirectory(ip_filter)
 add_subdirectory(bin_id)
 add_subdirectory(timus)
 add_subdirectory(allocator)
+add_subdirectory(print_ip)
 
 enable_testing()
