Setup doxygen infrastructure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,16 @@ project(otus_hws)
 add_custom_target(deploy
   COMMENT "deploying is executed")
 
+configure_file(docs.cfg.in docs.cfg)
+
+add_custom_target(docs
+  DEPENDS
+  ${CMAKE_CURRENT_BINARY_DIR}/../docs/html/index.html)
+
+add_custom_command(OUTPUT
+  ${CMAKE_CURRENT_BINARY_DIR}/../docs/html/index.html
+  COMMAND doxygen docs.cfg)
+
 add_subdirectory(helloworld)
 add_subdirectory(ip_filter)
 add_subdirectory(bin_id)
