Fix deploying (travis)
Multiple providers must be within a single deploy section, included as a list

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,15 +29,13 @@ script:
   - make docs
 
 deploy:
-  provider: script
-  skip_cleanup: true
-  script: make deploy
+  - provider: script
+    skip_cleanup: true
+    script: make deploy
+  - provider: pages
+    skip-cleanup: true
+    keep-history: true
+    github-token: $GH_REPO_TOKEN
+    local-dir: docs
   on:
     branch: master
-
-deploy:
-  provider: pages
-  skip-cleanup: true
-  keep-history: true
-  github-token: $GH_REPO_TOKEN
-  local-dir: docs
