Add bulk task draft (bulk)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,5 +23,6 @@ add_subdirectory(allocator)
 add_subdirectory(print_ip)
 add_subdirectory(editor)
 add_subdirectory(matrix)
+add_subdirectory(bulk)
 
 enable_testing()
