--- a/matrix/CMakeLists.txt
+++ b/matrix/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required(VERSION 3.8)
 
-project(matrix VERSION 0.0.1 LANGUAGES CXX)
+project(matrix VERSION 0.0.2 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -23,3 +23,7 @@ add_custom_target(deploy-${PROJECT_NAME}
   COMMENT "${PROJECT_NAME} package is deploying")
 
 add_dependencies(deploy deploy-${PROJECT_NAME})
+
+enable_testing()
+
+add_subdirectory(tests)
